# CPPDemo

./: .gitattributes  CMakeLists.txt  main.cpp
Demo/: CMakeLists.txt  demo.cpp
Demo/Worker/: Singer.cpp  SingingWaiter.cpp  Waiter.cpp  Worker.cpp
include/: Worker.h  demo.h
